<resources>
    <string name="app_name">GenPass</string>
    <string name="app_subtitle">The featureful password generator</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="nav_password">Password</string>
    <string name="nav_passphrase">Passphrase</string>

    <string name="password_enabled">Enabled</string>
    <string name="password_mandatory">Mandatory</string>

    <string name="default_password_text">Tap Generate for a new password</string>
    <string name="default_passphrase_text">Tap Generate for a new passphrase</string>
    <string name="generate">Generate</string>

    <string name="lowercase">qwertyuiopasdfghjklzxcvbnm</string>
    <string name="uppercase">QWERTYUIOPASDFGHJKLZXCVBNM</string>
    <string name="numeric">1234567890</string>
    <string name="symbols">"~`!@#$%^*()-_+=\\|]}[{;:/?.,&amp;&apos;&lt;&gt;"\"</string>

    <string name="dict_load_snack">Please wait while the dictionary is loaded</string>
    <string name="empty_charset">Please select at least one character class</string>
    <string name="too_many_mandates">The number of mandatory characters must be fewer than length of the password</string>
    <string name="zero_length">You selected a length of zero</string>
    <string name="copy_msg">Copied to clipboard</string>

    <string name="password_length">Length</string>
    <string name="password_lower">Lowercase</string>
    <string name="password_upper">Uppercase</string>
    <string name="password_numeric">Numeric</string>
    <string name="password_symbols">Symbols</string>

    <string name="passphrase_delimiter_label">Delimiter</string>
    <string name="passphrase_num_words_label">Number of words</string>
    <string name="passphrase_force_capitalised_label">Force capitalised</string>

    <string name="passphrase_default_delimiter"> </string>
    <string name="passphrase_default_num_words">4</string>

    <string name="clipboard_text" translatable="false">password</string>

    <string name="pref_password_length_key" translatable="false">pwlen</string>
    <string name="pref_password_char_sets_key" translatable="false">pwcharsets</string>
    <string-array name="pref_password_char_set_keys" translatable="false">
        <item>pwlow</item>
        <item>pwup</item>
        <item>pwnum</item>
        <item>pwsymb</item>
    </string-array>

    <string name="pref_password_length">Length</string>
    <string name="pref_password_char_sets">Character Sets</string>
    <string-array name="pref_password_char_set_names">
        <item>Lowercase</item>
        <item>Uppercase</item>
        <item>Numeric</item>
        <item>Symbol</item>
    </string-array>

    <string-array name="pref_password_char_set_default_enabled">
        <item>pwlow</item>
        <item>pwup</item>
        <item>pwnum</item>
    </string-array>
    <string-array name="pref_password_char_set_default_mandatory"/>
    <array name="pref_password_char_set_default_value">
        <item>@array/pref_password_char_set_default_enabled</item>
        <item>@array/pref_password_char_set_default_mandatory</item>
    </array>

    <string-array name="pref_password_column_entries">
        <item>Enabled</item>
        <item>Mandatory</item>
    </string-array>
    <string-array name="pref_password_column_entry_value_mods">
        <item>en</item>
        <item>man</item>
    </string-array>


    <string name="pref_password_lower_enabled" translatable="false">pwlowen</string>
    <string name="pref_password_lower_mandatory" translatable="false">pwlowman</string>
    <string name="pref_password_upper_enabled" translatable="false">pwupen</string>
    <string name="pref_password_upper_mandatory" translatable="false">pwupman</string>
    <string name="pref_password_numeric_enabled" translatable="false">pwnumen</string>
    <string name="pref_password_numeric_mandatory" translatable="false">pwnumman</string>
    <string name="pref_password_symbol_enabled" translatable="false">pwsymben</string>
    <string name="pref_password_symbol_mandatory" translatable="false">pwsymbman</string>

    <string name="pref_passphrase_delimiter" translatable="false">ppdelim</string>
    <string name="pref_passphrase_num_words" translatable="false">ppnumwords</string>
    <string name="pref_passphrase_force_cap" translatable="false">ppforcecap</string>

    <string name="title_activity_settings">Settings</string>

    <string name="pref_password_length_default">32</string>
    <string name="pref_password_length_max">128</string>

</resources>