<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/password_lower"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/password_lower_label"/>

         <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/password_lower_enabled"
            android:layout_toStartOf="@+id/password_lower_mandatory"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@id/password_lower_mandatory"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/password_upper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/password_upper_label"/>

         <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/password_upper_enabled"
            android:layout_toStartOf="@+id/password_upper_mandatory"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@id/password_upper_mandatory"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/password_numeric"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/password_numeric_label"/>

         <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/password_numeric_enabled"
            android:layout_toStartOf="@+id/password_numeric_mandatory"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@id/password_numeric_mandatory"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/password_symbols"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/password_symbols_label"/>

         <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/password_symbols_enabled"
            android:layout_toStartOf="@+id/password_symbols_mandatory"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@id/password_symbols_mandatory"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>

</LinearLayout>